# CloudRobotics-Service

./: README.md
c_s_cloudrobot/: CMakeLists.txt  package.xml
c_s_cloudrobot/include/arcodelistener/: client.h  detect_object.h  my_move_base.h
c_s_cloudrobot/launch/: voice.launch
c_s_cloudrobot/src/: AR_listener.cpp  ORK_listener.cpp  checkoutserver.cpp  client.cpp  detect_object.cpp  my_move_base.cpp  testclient.cpp  voice_analyze.cpp
c_s_cloudrobot/srv/: RecongServerOn.srv  SelectFromSqlite3.srv  TerminatePID.srv
c_s_cloudrobot/temp/: temp.cpp
my_ground_filter/: CMakeLists.txt  package.xml
my_ground_filter/src/: pcl_cut.cc  pcl_ransac_ground_filter.cc
navigation-kinetic-devel/map_server/src/: map_saver.cpp
pcl_op/lidar_ground_filter/: CMakeLists.txt  package.xml
pcl_op/lidar_ground_filter/src/: pcl_ransac_ground_filter.cc  pcl_ransac_ground_filter.cc.bak  pcl_ransac_ground_filter.origin.cc
pcl_op/pcl_tutorials/: CMakeLists.txt  package.xml
pcl_op/pcl_tutorials/src/: pcl_sample.cpp
pcl_op/ransac_ground_detect/: CMakeLists.txt  package.xml
pcl_op/ransac_ground_detect/src/: ransac_ground_detect.bak1.cc  ransac_ground_detect.cc
prohibition_msgs/: CMakeLists.txt  package.xml
prohibition_msgs/msg/: area.msg  line.msg  point.msg  prohibition.msg
prohibition_msgs/src/: prohibition_msg_caller.cpp  prohibition_msg_provider.cpp
prohibition_msgs/srv/: prohibition_msg.srv
ros_exploring-master/robot_perception/robot_vision/: camera_calibration.yaml
ros_exploring-master/robot_perception/robot_vision/config/: obj.rviz
ros_exploring-master/robot_perception/robot_vision/launch/: ar_track_camera.launch  temp.launch  xinquan_ar_cloud_server.launch  xinquan_obj_cloud_server.launch
test_a_utility/: CMakeLists.txt  package.xml
test_a_utility/include/test_utility/: test_utility.h
test_a_utility/src/: test_utility.cpp
test_using_utility/: CMakeLists.txt  package.xml
test_using_utility/src/: test_using_utility.cpp
xfei_asr/: CMakeLists.txt
xfei_asr/src/: asr_sample.c  iat_publish_speak.cpp  iat_record.c  iat_sample.c  sch_speak.c  sch_text.c  tts_sample.c  tts_subscribe_speak.cpp
xfei_asr/src/msc/0fc24f662c35139f03d870612e864f73/: u.data  urec.data
