<?xml version="1.0"?>
<package format="2">
  <name>test_utility</name>
  <version>0.0.0</version>
  <description>The test_utility package</description>
  <maintainer email="asber@todo.todo">asber</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -ltest_utility"/> 
  </export>
</package>
